add a new paragraph

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<p>this is paragraph.</p>
-<!-- right noe this is untracted file means git is not able to track it 
+<p>HELLO WORLD.</p>
+<!-- right now this is untracted file means git is not able to track it 
 to track it by git there are two steps-
-1. add :-add this file to current working directory.(staged)
-2. commit :- -->
+1. add :-add this file to current working directory/folder.(staged)
+      syntax :  git add file name    or     git add .
+2.  commit :-  git commit -m "message"      
